[package]
name = "todo"
version = "0.1.0"
authors = ["Tsukasa Horinouchi <tsukasa.horinouchi@groove-x.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
askama = "0.10.5"
thiserror = "1.0.23"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
rusqlite = {version = "0.24.2", features = ["bundled"]}
